test/error/test-10.ifj21
 -- 9 (integer dividing by zero)
require "ifj21"

function main()
    local a : integer = 1
    local b : integer = 0

    a = a // b
end
